--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
   <link rel="stylesheet" href="assets/css/style.css" />
 
-
   <!-- <link rel="icon" type="image/png" href="assets/img/logo/logo.png" sizes="32x32">
     <link rel="icon" type="image/png" href="assets/img/logo/logo.png" sizes="16x16"> -->
   <!-- End My Style -->
+
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -48,7 +48,7 @@
     <!-- End Site Mobile -->
 
     <!-- Menu Principal -->
-    <div class="border-bottom top-bar pt-3 pb-3 bg-gradiente-1" id="home-section">
+    <div class="border-bottom top-bar pt-3 pb-3 bg-gradiente-1 menu-mobile" id="home-section">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
@@ -134,7 +134,6 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-
               </div>
             </div>
           </div>
@@ -154,10 +153,10 @@
     <!-- End Carrousel -->
 
     <!-- End Section Cards -->
-    <div class="section-cards mt-4 mb-4 pb-4">
+    <div class="section-cards mb-4 pb-4 mt-4">
       <div class="container">
         <div class="row mb-4">
-          <div class="col-lg-4 mt-4 text-center ">
+          <div class="col-lg-4 mt-4 text-center">
             <div class="col-lg-12 p-4 card-mk shadow-sm bg-white">
               <div class="bg-primario mb-4 circle">
                 <img src="assets/img/svg/wi-fi.svg" class="mt-3" />
@@ -203,19 +202,19 @@
           </div>
         </div>
         <div class="row mt-4 text-white">
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <h1>53</h1>
             <span>Mil KM de FO Instaladas</span>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <h1>800</h1>
             <span>Mil Instalações/ Ano RTB</span>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <h1>17</h1>
             <span>Mil O&M sites e centrais telefonia móvel / fixa</span>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-sm-6">
             <h1>6</h1>
             <span>Milhões de terminais/acessos planta interna/externa</span>
           </div>
@@ -271,14 +270,11 @@
           <div class="col-lg-12">
             <!-- Slider de Publicidades -->
             <div class="slide-one-item home-slider owl-carousel">
-              <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/covid-1.jpg); background-size: cover;height: 329px;">
+              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-1.jpg); ">
               </div>
-              <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/covid-2.jpg); background-size: cover;height: 329px;">
+              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-2.jpg);">
               </div>
-              <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/covid-3.jpg); background-size: cover;height: 329px;">
+              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-3.jpg);">
               </div>
             </div>
             <!-- End Slider de Publicidades -->
@@ -356,20 +352,20 @@
     <!-- Anuncios ou Banners Publicitários -->
     <div class="anuncios pb-4">
       <div class="container">
-        <div class="row mb-4">
+        <div class="row">
           <!-- Aqui vai ser slider show -->
           <div class="col-lg-12 text-white">
-            <div class="content-slider mt-150">
-              <div class="row mt-4">
-                <div class="col-lg-6 border-right">
+            <div class="content-slider ">
+              <div class="row mt-20">
+                <div class="col-lg-6 border-right mt-1">
                   <h2 class="text-uppercase negrito">Equipamentos</h2>
                   <p>Já temos alguns equipamentos disponíveis para si</p>
-                  <a href="#" class="btn text-white bg-gradiente-1 bg-primario border-0">Mais
+                  <a href="pages/produtos.html" class="btn text-white mb-2 bg-gradiente-1 bg-primario border-0">Mais
                     Equipamentos</a>
                 </div>
                 <div class="col-lg-6 text-right">
                   <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 mt-1">
                       <div class="col-lg-12 border p-4 text-center">
                         <img src="assets/img/svg/equi-1.svg" alt="" class="col-lg-12 mb-2" /><br />
                         <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
@@ -378,7 +374,7 @@
                         </h6>
                       </div>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 mt-1">
                       <div class="col-lg-12 text-center border p-4">
                         <img src="assets/img/svg/equi-2.svg" alt="" class="col-lg-12 mb-2" /><br />
                         <span class="negrito">18.000 KZ <sup><s>21.000kz</s></sup></span>
@@ -431,204 +427,195 @@
           <div class="col-lg-12">
             <h3 class="text-uppercase negrito">Parceiros</h3>
           </div>
-          <!-- Também vai ser um slider -->
-          <div class="row mt-4">
-            <div class="col-lg-3">
-              <img src="assets/img/logo/governo-de-angola.png" class="col-lg-12" alt="" />
-            </div>
-            <div class="col-lg-3">
-              <img src="assets/img/logo/mtti.png" class="col-lg-12" alt="" />
-            </div>
-            <div class="col-lg-3">
-              <img src="assets/img/logo/zap.png" class="col-lg-12" alt="" />
-            </div>
-            <div class="col-lg-3">
-              <img src="assets/img/logo/mstelecom.png" class="col-lg-12" alt="" />
+
+          <div class="row mt-4 pb-4">
+            <div class="parceiros-slider owl-carousel">
+              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-1.jpg); ">
+              </div>
+              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-2.jpg);">
+              </div>
+              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-3.jpg);">
+              </div>
             </div>
           </div>
-          <!-- End Slider -->
         </div>
       </div>
+      <!-- End Parceiros -->
+
+      <!-- Localização -->
+      <div class="localizacao mt-4 pb-4 pt-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 mb-4">
+              <h3 class="text-uppercase negrito">Mapa do Site</h3>
+            </div>
+            <div class="col-lg-12">
+              <div>
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63080.28578597053!2d13.205468937890322!3d-8.83128172496379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f39bd428607b%3A0x1cafbf8158802a89!2sAngola%20Telecom!5e0!3m2!1spt-PT!2sao!4v1595418272337!5m2!1spt-PT!2sao"
+                  width="100%" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false"
+                  tabindex="0" class=" card-mk"></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Localização -->
+
+      <!-- Publicidade -->
+      <div class="publicidade-footer mb-4">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12">
+              <!-- Slider de Publicidades -->
+              <div class="slide-one-item home-slider owl-carousel">
+                <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-1.jpg);">
+                </div>
+                <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-2.jpg); ">
+                </div>
+                <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-3.jpg);">
+                </div>
+              </div>
+              <!-- End Slider de Publicidades -->
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Publicidade -->
+
+      <!-- Footer -->
+      <footer class="site-footer">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="row">
+                <div class="col-md-3 col-lg-3">
+                  <h2 class="footer-heading mb-4">Destaques</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">TV AT</a></li>
+                    <li><a href="#">Web mail</a></li>
+                    <li><a href="#">Internet Banking</a></li>
+                    <li><a href="#">Cobertura de Rede</a></li>
+                  </ul>
+                </div>
+                <div class="col-md-3">
+                  <h2 class="footer-heading mb-4">Suporte</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Apoio ao cliente</a></li>
+                    <li><a href="#">Reclamação</a></li>
+                    <li><a href="#">Sugestões</a></li>
+                    <li><a href="#">Contactos</a></li>
+                    <li><a href="#">Lojas</a></li>
+                  </ul>
+                </div>
+                <div class="col-md-3">
+                  <h2 class="footer-heading mb-4">Planos e Serviços</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Indicativo Nacional</a></li>
+                    <li><a href="#">Ind. Internacionais</a></li>
+                    <li><a href="#">Números Úteis</a></li>
+                    <li><a href="#">Nº Utilidade Pública</a></li>
+                    <li><a href="#">Normativos Intranet</a></li>
+                  </ul>
+                </div>
+                <div class="col-md-3">
+                  <h2 class="footer-heading mb-4">Outros Links</h2>
+                  <ul class="list-unstyled">
+                    <li><a href="#">Política de Privacidade</a></li>
+                    <li><a href="#">AAPSI</a></li>
+                    <li><a href="#">Relatório e Contas 2018</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row border-top">
+            <div class="col-md-3">
+              <div class="pt-4">
+                <p>
+                  Copyright &copy;
+                  <script>
+                    document.write(new Date().getFullYear());
+                  </script>
+                  por <br />
+                  <a href="#" target="_blank">Codebehind</a>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-3 mt-4">
+              <a href="#"><i></i>angolatelecom@.com</a><br />
+              <a href="#"><i></i>+244 888 000</a>
+            </div>
+            <div class="col-md-3 mt-4">
+              <a href="#"><i></i>Luanda, Angola</a><br />
+              <a href="#"><i></i>Luanda</a>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- End Footer -->
     </div>
-    <!-- End Parceiros -->
-
-    <!-- Localização -->
-    <div class="localizacao mt-4 pb-4 pt-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 mb-4">
-            <h3 class="text-uppercase negrito">Mapa do Site</h3>
-          </div>
-          <div class="col-lg-12">
-            <div>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63080.28578597053!2d13.205468937890322!3d-8.83128172496379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f39bd428607b%3A0x1cafbf8158802a89!2sAngola%20Telecom!5e0!3m2!1spt-PT!2sao!4v1595418272337!5m2!1spt-PT!2sao"
-                width="100%" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0" class=" card-mk"></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End Localização -->
-
-    <!-- Publicidade -->
-    <div class="publicidade mb-4">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <!-- Slider de Publicidades -->
-            <div class="slide-one-item home-slider owl-carousel">
-              <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/covid-1.jpg); background-size: cover;height: 329px;">
-              </div>
-              <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/covid-2.jpg); background-size: cover;height: 329px;">
-              </div>
-              <div class="testimonial bg-white"
-                style="background-image: url(assets/img/banner/covid-3.jpg); background-size: cover;height: 329px;">
-              </div>
-            </div>
-            <!-- End Slider de Publicidades -->
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Publicidade -->
-
-    <!-- Footer -->
-    <footer class="site-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-3 col-lg-3">
-                <h2 class="footer-heading mb-4">Destaques</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">TV AT</a></li>
-                  <li><a href="#">Web mail</a></li>
-                  <li><a href="#">Internet Banking</a></li>
-                  <li><a href="#">Cobertura de Rede</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Suporte</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">Apoio ao cliente</a></li>
-                  <li><a href="#">Reclamação</a></li>
-                  <li><a href="#">Sugestões</a></li>
-                  <li><a href="#">Contactos</a></li>
-                  <li><a href="#">Lojas</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Planos e Serviços</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">Indicativo Nacional</a></li>
-                  <li><a href="#">Ind. Internacionais</a></li>
-                  <li><a href="#">Números Úteis</a></li>
-                  <li><a href="#">Nº Utilidade Pública</a></li>
-                  <li><a href="#">Normativos Intranet</a></li>
-                </ul>
-              </div>
-              <div class="col-md-3">
-                <h2 class="footer-heading mb-4">Outros Links</h2>
-                <ul class="list-unstyled">
-                  <li><a href="#">Política de Privacidade</a></li>
-                  <li><a href="#">AAPSI</a></li>
-                  <li><a href="#">Relatório e Contas 2018</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="row border-top">
-          <div class="col-md-3">
-            <div class="pt-4">
-              <p>
-                Copyright &copy;
-                <script>
-                  document.write(new Date().getFullYear());
-                </script>
-                por <br />
-                <a href="#" target="_blank">Codebehind</a>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-3 mt-4">
-            <a href="#"><i></i>angolatelecom@.com</a><br />
-            <a href="#"><i></i>+244 888 000</a>
-          </div>
-          <div class="col-md-3 mt-4">
-            <a href="#"><i></i>Luanda, Angola</a><br />
-            <a href="#"><i></i>Luanda</a>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <!-- End Footer -->
-  </div>
-  <!-- .site-wrap -->
+    <!-- .site-wrap -->
 
 
-  <script src="assets/js/jquery-3.3.1.min.js"></script>
-  <script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
-  <script src="assets/js/jquery-ui.js"></script>
-  <script src="assets/js/popper.min.js"></script>
-  <script src="assets/js/bootstrap.min.js"></script>
-  <script src="assets/js/owl.carousel.min.js"></script>
-  <script src="assets/js/jquery.stellar.min.js"></script>
-  <script src="assets/js/jquery.countdown.min.js"></script>
-  <script src="assets/js/bootstrap-datepicker.min.js"></script>
-  <script src="assets/js/jquery.easing.1.3.js"></script>
-  <script src="assets/js/aos.js"></script>
-  <script src="assets/js/jquery.fancybox.min.js"></script>
-  <script src="assets/js/jquery.sticky.js"></script>
+    <script src="assets/js/jquery-3.3.1.min.js"></script>
+    <script src="assets/js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="assets/js/jquery-ui.js"></script>
+    <script src="assets/js/popper.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/jquery.stellar.min.js"></script>
+    <script src="assets/js/jquery.countdown.min.js"></script>
+    <script src="assets/js/bootstrap-datepicker.min.js"></script>
+    <script src="assets/js/jquery.easing.1.3.js"></script>
+    <script src="assets/js/aos.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
+    <script src="assets/js/jquery.sticky.js"></script>
 
-  <script src="assets/js/typed.js"></script>
-  <script src="assets/js/demo.js"></script>
-  <script>
-    var typed = new Typed(".typed-words", {
-      strings: ["Web Apps", " WordPress", " Mobile Apps"],
-      typeSpeed: 80,
-      backSpeed: 80,
-      backDelay: 4000,
-      startDelay: 1000,
-      loop: true,
-      showCursor: true,
-    });
-    // Carousel
-    // var owl = $(".owl-carousel");
-    // owl.owlCarousel({
-    //   items: 2,
-    //   loop: true,
-    //   margin: 110,
-    //   autoplay: true,
-    //   autoplayTimeout: 2000,
-    //   autoplayHoverPause: true,
-    //   responsiveClass: true,
-    // });
-    $('.owl-carousel').owlCarousel({
-      loop: true,
-      margin: 10,
-      nav: true,
-      autoplay: true,
-      autoplayTimeout: 1000,
-      responsive: {
-        0: {
-          items: 3
-        },
-        600: {
-          items: 3
-        },
-        1000: {
-          items: 5
+    <script src="assets/js/typed.js"></script>
+    <script src="assets/js/demo.js"></script>
+    <script>
+      var typed = new Typed(".typed-words", {
+        strings: ["Web Apps", " WordPress", " Mobile Apps"],
+        typeSpeed: 80,
+        backSpeed: 80,
+        backDelay: 4000,
+        startDelay: 1000,
+        loop: true,
+        showCursor: true,
+      });
+      // Carousel
+      // var owl = $(".owl-carousel");
+      // owl.owlCarousel({
+      //   items: 2,
+      //   loop: true,
+      //   margin: 110,
+      //   autoplay: true,
+      //   autoplayTimeout: 2000,
+      //   autoplayHoverPause: true,
+      //   responsiveClass: true,
+      // });
+      $('.owl-carousel').owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        autoplay: true,
+        autoplayTimeout: 1000,
+        responsive: {
+          0: {
+            items: 3
+          },
+          600: {
+            items: 3
+          },
+          1000: {
+            items: 5
+          }
         }
-      }
-    });
-  </script>
+      });
+    </script>
 
-  <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
