--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -132,7 +132,7 @@
         </header>
         <!-- End Menu Principal -->
 
-        <div class="contactos  mt-4 mb-4 mt-150">
+        <div class="contactos mb-4 mt-150">
             <div class="container">
                 <div class="row">
                     <!-- Mapa do Data Center -->
