Responsividade dentro do projecto da Angola Telecom

--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -138,12 +138,12 @@
                 <div class="row">
                     <!-- Serviços -->
                     <div class="col-lg-12  mt--1">
-                        <div class="banner-servicos  mt-49 " style="height: 350px;">
+                        <div class="servicos_section mt-49 ">
                             <div class="row">
-                                <div class="col-lg-8  bg-white"
-                                    style="background-image:url(https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg); background-size: cover;">
+                                <div class="col-lg-8 bg-white servicos_seccao_img"
+                                    style="background-image:url(https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg); ">
                                 </div>
-                                <div class="col-lg-4 bg-gradiente-1" style="height: 350px !important;">
+                                <div class="col-lg-4 bg-gradiente-1 servicos_descricao">
                                     <div class="content-servicos-fundo text-white mt-100">
                                         <h3 class="negrito">Catálogo dos Serviços</h3>
                                         <h4 class="mt-4">A rede da Angola Telecom é uma das mais avançadas do mundo</h4>
@@ -159,12 +159,12 @@
         <!-- End Serviços -->
 
         <!-- Sobre os Nossos serviços -->
-        <div class="sobre-servicos bg-white mb-4 pt-4 pb-4 text-center" style=" margin-top: -22px;">
+        <div class="sobre_servicos bg-white mb-4 pt-4 pb-4 text-center">
             <div class="container ">
                 <div class="row">
                     <div class="col-lg-4 mt-4 ">
-                        <div class="">
-                            <img src="../assets/img/svg/icons8_administrator_male.svg" style="width: 30%;" alt="">
+                        <div class="sobre_servicos_item">
+                            <img src="../assets/img/svg/icons8_administrator_male.svg" alt="">
                             <h4>Segmento Empresarial</h4>
                             <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque explicabo
                                 in beatae
@@ -172,8 +172,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-4">
-                        <div class="">
-                            <img src="../assets/img/svg/icons8_home_page_1.svg" style="width: 30%;" alt="">
+                        <div class="sobre_servicos_item">
+                            <img src="../assets/img/svg/icons8_home_page_1.svg" alt="">
                             <h4>Segmento Residencial</h4>
                             <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque explicabo
                                 in beatae
@@ -181,8 +181,8 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-4">
-                        <div class="">
-                            <img src="../assets/img/svg/icons8_plus_2_math.svg" style="width: 30%;" alt="">
+                        <div class="sobre_servicos_item">
+                            <img src="../assets/img/svg/icons8_plus_2_math.svg" alt="">
                             <h4>Segmento a Grosso</h4>
                             <p class="mt-1">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque explicabo
                                 in beatae
@@ -336,17 +336,17 @@
         <!-- End Serviços -->
 
         <!-- Serviços Publicidades -->
-        <div class="servicos-publicidade mb-4 pb-4">
+        <div class="servicos_publicidade mb-4 pb-4">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mt-4">
                         <!-- Slider de Publicidades -->
                         <div class="slide-one-item home-slider owl-carousel">
                             <div class="testimonial bg-white"
-                                style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 250px;">
+                                style="background-image: url(../assets/img/banner/banner-footer.jpg);">
                             </div>
                             <div class="testimonial bg-white"
-                                style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 250px;">
+                                style="background-image: url(../assets/img/banner/banner-mk.png);">
                             </div>
                         </div>
                         <!-- End Slider de Publicidades -->
