--- a/pages/telinforma.html
+++ b/pages/telinforma.html
@@ -132,7 +132,7 @@
 
 
 
-    <div class="sobre-telinforma mb-4 pb-4 mt-100">
+    <div class="sobre_telinforma mb-4 pb-4 mt-100">
       <div class="container">
         <div class="row">
           <!-- Lateral Esquerdo -->
@@ -185,14 +185,12 @@
             <div class="pb-4 pt-4">
               <!-- Slider de Publicidades -->
               <div class="slide-one-item home-slider owl-carousel">
-                <div class="testimonial bg-white"
-                  style="background-image: url(../assets/img/banner/covid-1.jpg); background-size: cover;height: 190px;">
+                <div class="testimonial bg-white" style="background-image: url(../assets/img/banner/covid-1.jpg);">
                 </div>
                 <div class="testimonial bg-white"
-                  style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 190px;">
+                  style="background-image: url(../assets/img/banner/banner-footer.jpg); ">
                 </div>
-                <div class="testimonial bg-white"
-                  style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 190px;">
+                <div class="testimonial bg-white" style="background-image: url(../assets/img/banner/banner-mk.png); ">
                 </div>
               </div>
               <!-- End Slider de Publicidades -->
@@ -277,35 +275,35 @@
       </div>
     </div>
 
-    <div class="mt-4 bg-white pt-4 pb-4">
+    <div class="mt-4 bg-white pt-4 pb-4 espaco_form">
       <div class="container">
         <div class="col-lg-12 shadow-sm">
           <div class="row">
-            <div class="col-lg-4 text-white" style="background-image: -webkit-gradient(
+            <div class="col-lg-4 text-white telinforma_form_img" style="background-image: -webkit-gradient(
               linear,
               right top,
               left bottom,
               from(#0000008e),
               to(#0000008e)
-            ),url(../assets/img/banner/v1-1.jpg); background-size: cover; background-position: center;">
+            ),url(../assets/img/banner/v1-1.jpg);">
               <div class="mt-150">
                 <h3 class="negrito text-uppercase">Deixe a sua opinião</h3>
                 <h5>Queremos saber de ti o que precisamos melhorar nos nossos telinformas</h5>
               </div>
             </div>
-            <div class="col-lg-8  pt-4 pb-4 bg-white">
+            <div class="col-lg-8 col-12 pt-4 pb-4 bg-white telinforma_form_input">
               <form action="">
                 <div class="row p-4">
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 mt-2">
                     <input type="text" class="form-control border" placeholder="Nome Completo">
                   </div>
-                  <div class="col-lg-6">
+                  <div class="col-lg-6 mt-2">
                     <input type="tel" class="form-control border" placeholder="Telefone">
                   </div>
-                  <div class="col-lg-12 mt-4">
+                  <div class="col-lg-12 mt-2">
                     <input type="email" class="form-control border" placeholder="email@gmail.com">
                   </div>
-                  <div class="col-lg-12 mt-4">
+                  <div class="col-lg-12 mt-2">
                     <textarea name="" class="form-control border"
                       placeholder="Ajude-nos a melhor os nossos telinformas"></textarea>
                   </div>
