--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -139,8 +139,8 @@
                     <div class="col-lg-12">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63080.28578597053!2d13.205468937890322!3d-8.83128172496379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f39bd428607b%3A0x1cafbf8158802a89!2sAngola%20Telecom!5e0!3m2!1spt-PT!2sao!4v1595418272337!5m2!1spt-PT!2sao"
-                            width="100%" height="450" frameborder="0" style="border: 0;" allowfullscreen=""
-                            aria-hidden="false" tabindex="0" class=" card-mk"></iframe>
+                            width="100%" height="450" frameborder="0" allowfullscreen="" aria-hidden="false"
+                            tabindex="0" class=" card-mk border-zero"></iframe>
                     </div>
                     <!-- End Mapa Data Center -->
                     <!-- Contactos -->
@@ -153,24 +153,23 @@
                                     <form action="" class="mt-4">
                                         <div class="form-group">
                                             <input type="text" placeholder="Nome Completo"
-                                                class="form-control shadow-sm" style="border:0px">
+                                                class="form-control shadow-sm border-zero" />
                                         </div>
                                         <div class="form-group">
-                                            <input type="email" placeholder="E-mail" class="form-control shadow-sm"
-                                                style="border:0px">
+                                            <input type="email" placeholder="E-mail"
+                                                class="form-control shadow-sm border-zero">
                                         </div>
                                         <div class="form-group">
-                                            <input type="text" placeholder="Assunto" class="form-control shadow-sm"
-                                                style="border:0px">
+                                            <input type="text" placeholder="Assunto"
+                                                class="form-control shadow-sm border-zero" />
                                         </div>
                                         <div class="form-group">
-                                            <textarea name="" id="" class="form-control shadow-sm"
-                                                placeholder="Mensagem" style="border:0px"></textarea>
+                                            <textarea name="" id="" class="form-control shadow-sm border-zero"
+                                                placeholder="Mensagem"></textarea>
                                         </div>
                                         <div class="form-group">
                                             <input type="submit" value="Enviar" placeholder="Assunto"
-                                                class="form-control shadow-sm col-lg-3 bg-primario text-white"
-                                                style="border:0px">
+                                                class="form-control shadow-sm col-lg-3 bg-primario text-white border-zero" />
                                         </div>
                                     </form>
                                 </div>
@@ -194,34 +193,30 @@
                                     </ul>
                                     <div class="mt-3">
                                         <div class="row">
-                                            <div class="col-lg-2">
+                                            <div class="col-lg-2 col-2">
                                                 <a href="#" class="icons-sociais bg-primario">
-                                                    <div class="text-center bg-primario"
-                                                        style="width: 40px; height: 40px !important; border-radius: 50% !important;">
+                                                    <div class="text-center bg-primario icon-border">
                                                         <i class="fab fa-facebook-f mt-2 p-1 text-white"></i>
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-lg-2 col-2">
                                                 <a href="#" class="icons-sociais bg-primario">
-                                                    <div class="text-center bg-primario"
-                                                        style="width: 40px; height: 40px !important; border-radius: 50% !important;">
+                                                    <div class="text-center bg-primario icon-border">
                                                         <i class="fab fa-twitter mt-2 p-1 text-white"></i>
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-lg-2 col-2">
                                                 <a href="#" class="icons-sociais bg-primario">
-                                                    <div class="text-center bg-primario"
-                                                        style="width: 40px; height: 40px !important; border-radius: 50% !important;">
-                                                        <i class="fab fa-dribbble mt-2 p-1 text-white"></i>
+                                                    <div class="text-center bg-primario icon-border">
+                                                        <i class=" fab fa-dribbble mt-2 p-1 text-white"></i>
                                                     </div>
                                                 </a>
                                             </div>
-                                            <div class="col-lg-2">
+                                            <div class="col-lg-2 col-2">
                                                 <a href="#" class="icons-sociais bg-primario">
-                                                    <div class="text-center bg-primario"
-                                                        style="width: 40px; height: 40px !important; border-radius: 50% !important;">
+                                                    <div class="text-center bg-primario icon-border">
                                                         <i class="fab fa-instagram mt-2 p-1 text-white"></i>
                                                     </div>
                                                 </a>
