--- a/pages/lojas.html
+++ b/pages/lojas.html
@@ -135,15 +135,12 @@
         <div class="row">
           <div class="col-lg-12">
             <!-- Slider de Publicidades -->
-            <div class="slide-one-item home-slider owl-carousel">
-              <div class="testimonial bg-white"
-                style="background-image: url(../assets/img/banner/covid-1.jpg); background-size: cover;height: 290px;">
+            <div class="slide-one-item home-slider owl-carousel lojas-slider">
+              <div class="testimonial bg-white" style="background-image: url(../assets/img/banner/covid-1.jpg);">
               </div>
-              <div class="testimonial bg-white"
-                style="background-image: url(../assets/img/banner/banner-footer.jpg); background-size: cover;height: 290px;">
+              <div class="testimonial bg-white" style="background-image: url(../assets/img/banner/banner-footer.jpg); ">
               </div>
-              <div class="testimonial bg-white"
-                style="background-image: url(../assets/img/banner/banner-mk.png); background-size: cover;height: 290px;">
+              <div class="testimonial bg-white" style="background-image: url(../assets/img/banner/banner-mk.png); ">
               </div>
             </div>
             <!-- End Slider de Publicidades -->
@@ -182,16 +179,16 @@
             <div class="mt-4">
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63080.28578597053!2d13.205468937890322!3d-8.83128172496379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1a51f39bd428607b%3A0x1cafbf8158802a89!2sAngola%20Telecom!5e0!3m2!1spt-PT!2sao!4v1595418272337!5m2!1spt-PT!2sao"
-                width="100%" height="450" frameborder="0" style="border: 0;" allowfullscreen="" aria-hidden="false"
-                tabindex="0" class=" card-mk bg-white"></iframe>
+                width="100%" height="450" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"
+                class=" card-mk bg-white border-zero"></iframe>
             </div>
           </div>
 
-          <div class="col-lg-12 mt-4">
+          <div class="col-lg-12 mt-4 lojas-encontradas">
             <div class="row">
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
-                  <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
+                  <img src="../assets/img/banner/v1-1.jpg" alt="" />
                   <div class="p-4 mt-2">
                     <h5 class="text-primario">Angola Telecom</h5>
                     <div class="describe-loja">
@@ -221,7 +218,7 @@
               </div>
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
-                  <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
+                  <img src="../assets/img/banner/v1-1.jpg" alt="" />
                   <div class="p-4 mt-2">
                     <h5 class="text-primario">Angola Telecom</h5>
                     <div class="describe-loja">
@@ -251,7 +248,7 @@
               </div>
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
-                  <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
+                  <img src="../assets/img/banner/v1-1.jpg" alt="" />
                   <div class="p-4 mt-2">
                     <h5 class="text-primario">Angola Telecom</h5>
                     <div class="describe-loja">
@@ -281,7 +278,7 @@
               </div>
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
-                  <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
+                  <img src="../assets/img/banner/v1-1.jpg" alt="" />
                   <div class="p-4 mt-2">
                     <h5 class="text-primario">Angola Telecom</h5>
                     <div class="describe-loja">
@@ -311,7 +308,7 @@
               </div>
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
-                  <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
+                  <img src="../assets/img/banner/v1-1.jpg" alt="" />
                   <div class="p-4 mt-2">
                     <h5 class="text-primario">Angola Telecom</h5>
                     <div class="describe-loja">
@@ -341,7 +338,7 @@
               </div>
               <div class="col-lg-4 mt-4">
                 <div class=" bg-white border-0 shadow card-mk">
-                  <img src="../assets/img/banner/v1-1.jpg" style="width: 100%; height: 200px;" alt="" />
+                  <img src="../assets/img/banner/v1-1.jpg" alt="" />
                   <div class="p-4 mt-2">
                     <h5 class="text-primario">Angola Telecom</h5>
                     <div class="describe-loja">
@@ -362,7 +359,7 @@
                     </div>
 
                     <div class="mt-3 text-center">
-                      <button class="btn bg-primario  text-white m-auto text-center " data-toggle="modal"
+                      <button class="btn bg-primario  text-white m-auto text-center roudend-0" data-toggle="modal"
                         data-target=".contactar">Contactar Loja
                         <i class="fas fa-arrow-right text-white"></i></button>
                     </div>
@@ -380,23 +377,23 @@
     </div>
 
 
-
     <!-- Modal Único para as lojas -->
+
     <div class="modal fade contactar" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
       aria-hidden="true">
       <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-          <div class="row">
-            <div class="col-lg-5"
-              style="background-image:
+          <div class="row mt--2">
+            <div class="col-lg-5 col-sm-12 bg-danger form-banner-loja" style="background-image:
               -webkit-gradient(
                 linear,
                 right top,
                 left bottom,
                 from(#000000a6),
                 to(#000000a6)
-              ), url(../assets/img/banner/v1-3.jpg); background-size: cover; height: auto; background-position: center;">
-              <div class="content-describe-modal text-white p-2" style="margin-top: 150px">
+              ), url(../assets/img/banner/v1-3.jpg); ">
+              <div class="content-describe-modal text-white p-2 mt-150">
+
                 <h4>Contactar Loja</h4>
                 <h5 class="mt--4">Angola Telecom</h5>
                 <h6>Tel: 921 538 972</h6>
@@ -420,27 +417,31 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-7 p-4">
+            <div class="col-lg-7 pr-4 pt-4 col-12 form-register">
+              <button type="button" class="close bg-primario border-zero text-white p-2 loja-modal-close"
+                data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true" class="text-white">&times;</span>
+              </button>
               <form action="" method="post">
-                <div class="row mr-2">
+                <div class="row">
                   <div class="form-group col-lg-12">
                     <select name="" id="" class="form-control">
                       <option value="">Assunto</option>
                     </select>
                   </div>
-                  <div class="form-group col-lg-12">
+                  <div class="form-group col-lg-12 col-12">
                     <input type="text" class="form-control" placeholder="Nome Completo">
                   </div>
-                  <div class="form-group col-lg-12">
+                  <div class="form-group col-lg-12 col-12">
                     <input type="email" class="form-control" placeholder="Introduzir o seu email">
                   </div>
-                  <div class="form-group col-lg-12">
+                  <div class="form-group col-lg-12 col-12">
                     <input type="tel" class="form-control" placeholder="Introduzir o seu contacto">
                   </div>
-                  <div class="form-group col-lg-12">
+                  <div class="form-group col-lg-12 col-12">
                     <textarea name="" class="form-control" placeholder="Mensagem"></textarea>
                   </div>
-                  <div class="form-group col-lg-4">
+                  <div class="form-group col-lg-4 col-12">
                     <input type="submit" value="Enviar" class="form-control bg-primario text-white">
                   </div>
                 </div>
