--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -132,8 +132,7 @@
         <!-- End Menu Principal -->
 
         <!-- Banner Produtos -->
-        <div class="banner_produtos mt-4 p-4"
-            style="background-image:url(../assets/img/banner/v1-1.jpg); background-size: 100% ; height: 300px; margin-top: 98px !important">
+        <div class="banner_produtos p-4" style="background-image:url(../assets/img/banner/v1-1.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mt-100">
@@ -149,7 +148,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 mt-50">
-                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                        <div class="col-lg-12 card bg-white border-0 card-mk p-0">
                             <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
                                 alt="" style="height: 200px;" />
                             <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
@@ -163,7 +162,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-4">
-                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                        <div class="col-lg-12 card bg-white border-0 card-mk p-0">
                             <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
                                 alt="" style="height: 200px;" />
                             <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
@@ -179,7 +178,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-50">
-                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                        <div class="col-lg-12 card bg-white border-0 card-mk p-0">
                             <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
                                 alt="" style="height: 200px;" />
                             <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
@@ -195,7 +194,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-50">
-                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                        <div class="col-lg-12 card bg-white border-0 card-mk p-0">
                             <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
                                 alt="" style="height: 200px;" />
                             <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
@@ -209,7 +208,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-4">
-                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                        <div class="col-lg-12 card bg-white border-0 card-mk p-0">
                             <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
                                 alt="" style="height: 200px;" />
                             <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
@@ -223,7 +222,7 @@
                         </div>
                     </div>
                     <div class="col-lg-4 mt-50">
-                        <div class="col-lg-12 card bg-white border-0 card-mk" style="padding: 0px !important;">
+                        <div class="col-lg-12 card bg-white border-0 card-mk p-0">
                             <img src="https://img.freepik.com/fotos-gratis/feliz-mulher-afro-americana-linda-jovem-ouvindo-musica-em-seu-telefone-movel-e-sorrindo-meio-urbano-primavera-ou-verao-roupa-casual_139317-3222.jpg?size=626&ext=jpg"
                                 alt="" style="height: 200px;" />
                             <a class="bg-gradiente-1 text-white text-center p-0 negrito shadow mt-2 col-lg-6"
