--- a/pages/recrutamento.html
+++ b/pages/recrutamento.html
@@ -186,9 +186,9 @@
         </div>
 
 
-        <div class="row pb-3 pr-3 pl-3">
+        <div class="row pb-3 pr-3 pl-3 recrutamento_form">
           <div class="col-lg-12 mt--4 p-5 bg-white">
-            <h4 class="pl-4 pb-4">Recrutamento</h4>
+            <h4 class="pl-4 pb-4 recrutamento_title">Recrutamento</h4>
             <form action="" class="pl-4">
               <div class="row">
                 <div class="form-group col-lg-4">
