--- a/pages/sobre.html
+++ b/pages/sobre.html
@@ -133,7 +133,7 @@
         <div class="row">
 
           <!-- Lateral Esquerto informações relacionados com a Angola Telecom -->
-          <div class="col-lg-4">
+          <div class="col-lg-4 col-xl-4 col-12 col-md-12 sobre_lateral_seccao">
             <div class="pl-4 pr-4 mt--4">
               <h5>Como podemos ajudar ?</h5>
               <p class="mt-2">
@@ -152,8 +152,7 @@
                 também de outros segmentos da economia.
               </p>
             </div>
-
-            <div class="p-4">
+            <div class="p-4 manual_seccao">
               <object data="../assets/pdf/plano.pdf" type="application/x-pdf" title="Manual de Plano de Negócio"
                 width="500" height="720">
                 <a href="../assets/pdf/plano.pdf" class="text-dark" target="_blank">
@@ -168,9 +167,9 @@
           </div>
           <!-- End Lateral Esquerto informações relacionados com a Angola Telecom -->
 
-          <div class="col-lg-8 col-xl-8 col-md-8">
+          <div class="col-lg-8 col-xl-8 col-md-8 sobre_direito_seccao">
             <!-- Banner do Fundo Sbore -->
-            <div class="banner-fundo-sobre bg-dark pt-4 pb-4" style="
+            <div class="banner_fundo_sobre bg-dark pt-4 pb-4" style="
                   background-image: url(../assets/img/fundo.jpg);
                 ">
             </div>
@@ -196,8 +195,8 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="row">
-                    <div class="col-lg-2 ">
-                      <div class="icons-sobre text-center text-white bg-primario">
+                    <div class="col-lg-2 col-12 mt--3 pb-4 text-center">
+                      <div class="icons-sobre text-center m-auto text-white bg-primario">
                         <i class="fas fa-user mt-3"></i>
                       </div>
                     </div>
@@ -216,8 +215,8 @@
                 </div>
                 <div class="col-lg-12 mt-4">
                   <div class="row">
-                    <div class="col-lg-2">
-                      <div class="icons-sobre text-center text-white bg-primario">
+                    <div class="col-lg-2 col-12  mt--3 pb-4 text-center">
+                      <div class="icons-sobre text-center m-auto text-center text-white bg-primario">
                         <i class="fas fa-user mt-3"></i>
                       </div>
                     </div>
@@ -251,7 +250,7 @@
             <div class="mt-2">
               <div class="row">
                 <div class="col-lg-8">
-                  <div class="col-lg-12 valor-1 p-4 valor ">
+                  <div class="col-lg-12 valor-1 p-4 valor">
                     <div class=" mt-70">
                       <a href="#" class="border-0 roudend-0 h5 text-white">Confiança</a> <br>
                       <p>Encaramos os nossos clientes como nossos parceiros, estabelecendo uma relação de confiança nos
