Implementação das imagens

--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@
             <a href="assets/img/produtos/p1.jpg" class="media-1 card-mk" data-fancybox="gallery">
               <img src="assets/img/produtos/p1.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
-                <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale e
-                  Navegue</span>
+                <!-- <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale e
+                  Navegue</span> -->
               </div>
             </a>
           </div>
@@ -245,7 +245,7 @@
             <a href="assets/img/produtos/p2.jpg" class="media-1 card-mk" data-fancybox="gallery">
               <img src="assets/img/produtos/p2.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
-                <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span>
+                <!-- <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span> -->
               </div>
             </a>
           </div>
@@ -254,7 +254,7 @@
             <a href="assets/img/produtos/p3.jpg" class="media-1 card-mk" data-fancybox="gallery">
               <img src="assets/img/produtos/p3.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
-                <span class="text-uppercase btn border-0 m-auto text-white bg-gradiente-1 roudend-0">Fale Mais</span>
+                <!-- <span class="text-uppercase btn border-0 m-auto text-white bg-gradiente-1 roudend-0">Fale Mais</span> -->
               </div>
             </a>
           </div>
