--- a/index.html
+++ b/index.html
@@ -230,34 +230,42 @@
           <div class="col-lg-12">
             <h3 class="text-uppercase negrito">Nossos Produtos</h3>
           </div>
+        </div>
+        <div class="nossos_produtos_slider owl-carousel">
 
-          <div class="col-md-6 col-lg-4 mt-4 ">
+          <div class="mt-4 testimonial">
             <a href="assets/img/produtos/p1.jpg" class="media-1 card-mk" data-fancybox="gallery">
               <img src="assets/img/produtos/p1.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
-                <!-- <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale e
-                  Navegue</span> -->
               </div>
             </a>
           </div>
 
-          <div class="col-md-6 col-lg-4 mt-4">
+          <div class="mt-4 testimonial">
             <a href="assets/img/produtos/p2.jpg" class="media-1 card-mk" data-fancybox="gallery">
               <img src="assets/img/produtos/p2.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
-                <!-- <span class="text-uppercase m-auto btn border-0 text-white bg-gradiente-1 roudend-0">Fale Mais</span> -->
               </div>
             </a>
           </div>
 
-          <div class="col-md-6 col-lg-4 mt-4">
+          <div class=" mt-4 testimonial">
             <a href="assets/img/produtos/p3.jpg" class="media-1 card-mk" data-fancybox="gallery">
               <img src="assets/img/produtos/p3.jpg" alt="Image" class="img-fluid">
               <div class="media-1-content">
-                <!-- <span class="text-uppercase btn border-0 m-auto text-white bg-gradiente-1 roudend-0">Fale Mais</span> -->
               </div>
             </a>
           </div>
+
+          <div class=" mt-4 testimonial">
+            <a href="assets/img/produtos/p4.jpg" class="media-1 card-mk" data-fancybox="gallery">
+              <img src="assets/img/produtos/p4.jpg" alt="Image" class="img-fluid">
+              <div class="media-1-content">
+              </div>
+            </a>
+          </div>
+
+
         </div>
       </div>
     </div>
