--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
             </a>
           </div>
 
-
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas exercitationem dolorum eum nesciunt ad,
+          aliquid rerum omnis facere quaerat officia libero, ipsum commodi. Odit nesciunt sunt debitis molestias culpa
+          delectus.
         </div>
       </div>
     </div>
@@ -482,16 +484,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <!-- Slider de Publicidades -->
-            <div class="slide-one-item home-slider owl-carousel">
-              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-1.jpg);">
-              </div>
-              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-2.jpg); ">
-              </div>
-              <div class="testimonial bg-white" style="background-image: url(assets/img/banner/covid-3.jpg);">
-              </div>
+            <div class="p-2"
+              style="background-image: url(assets/img/banner/banner-footer.jpg); background-size: 100%; height: 250px">
             </div>
-            <!-- End Slider de Publicidades -->
           </div>
         </div>
       </div>
